--- a/ETL Pipeline Preparation.ipynb
+++ b/ETL Pipeline Preparation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "4  12  related-1;request-0;offer-0;aid_related-0;medi..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "4  related-1;request-0;offer-0;aid_related-0;medi...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -930,10 +930,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -943,9 +943,9 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -954,7 +954,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -978,12 +978,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1002,7 +1002,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1031,11 +1031,11 @@
       ],
       "text/plain": [
        "0  related  request  offer  aid_related  medical_help  medical_products  \\\n",
-       "0        1        0      0            0             0                 0   \n",
-       "1        1        0      0            1             0                 0   \n",
-       "2        1        0      0            0             0                 0   \n",
-       "3        1        1      0            1             0                 1   \n",
-       "4        1        0      0            0             0                 0   \n",
+       "0        0        0      0            0             0                 0   \n",
+       "1        0        0      0            0             0                 0   \n",
+       "2        0        0      0            0             0                 0   \n",
+       "3        0        0      0            0             0                 0   \n",
+       "4        0        0      0            0             0                 0   \n",
        "\n",
        "0  search_and_rescue  security  military  child_alone      ...        \\\n",
        "0                  0         0         0            0      ...         \n",
@@ -1046,7 +1046,7 @@
        "\n",
        "0  aid_centers  other_infrastructure  weather_related  floods  storm  fire  \\\n",
        "0            0                     0                0       0      0     0   \n",
-       "1            0                     0                1       0      1     0   \n",
+       "1            0                     0                0       0      0     0   \n",
        "2            0                     0                0       0      0     0   \n",
        "3            0                     0                0       0      0     0   \n",
        "4            0                     0                0       0      0     0   \n",
@@ -1061,7 +1061,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,6 +1073,7 @@
     "    \n",
     "    # convert column from string to numeric\n",
     "    categories[column] = pd.to_numeric(categories[column])\n",
+    "    categories[column] = np.where(categories[column]>1, 1, categories[column])\n",
     "categories.head()"
    ]
   },
@@ -1087,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1174,7 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1242,7 @@
        "      <td>Weather update - a cold front from Cuba that c...</td>\n",
        "      <td>Un front froid se retrouve sur Cuba ce matin. ...</td>\n",
        "      <td>direct</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1265,18 +1266,18 @@
        "      <td>Is the Hurricane over or is it not over</td>\n",
        "      <td>Cyclone nan fini osinon li pa fini</td>\n",
        "      <td>direct</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1289,7 +1290,7 @@
        "      <td>Looking for someone but no name</td>\n",
        "      <td>Patnm, di Maryani relem pou li banm nouvel li ...</td>\n",
        "      <td>direct</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1313,12 +1314,12 @@
        "      <td>UN reports Leogane 80-90 destroyed. Only Hospi...</td>\n",
        "      <td>UN reports Leogane 80-90 destroyed. Only Hospi...</td>\n",
        "      <td>direct</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1337,7 +1338,7 @@
        "      <td>says: west side of Haiti, rest of the country ...</td>\n",
        "      <td>facade ouest d Haiti et le reste du pays aujou...</td>\n",
        "      <td>direct</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1369,22 +1370,22 @@
        "4  12  says: west side of Haiti, rest of the country ...   \n",
        "\n",
        "                                            original   genre  related  \\\n",
-       "0  Un front froid se retrouve sur Cuba ce matin. ...  direct        1   \n",
-       "1                 Cyclone nan fini osinon li pa fini  direct        1   \n",
-       "2  Patnm, di Maryani relem pou li banm nouvel li ...  direct        1   \n",
-       "3  UN reports Leogane 80-90 destroyed. Only Hospi...  direct        1   \n",
-       "4  facade ouest d Haiti et le reste du pays aujou...  direct        1   \n",
+       "0  Un front froid se retrouve sur Cuba ce matin. ...  direct        0   \n",
+       "1                 Cyclone nan fini osinon li pa fini  direct        0   \n",
+       "2  Patnm, di Maryani relem pou li banm nouvel li ...  direct        0   \n",
+       "3  UN reports Leogane 80-90 destroyed. Only Hospi...  direct        0   \n",
+       "4  facade ouest d Haiti et le reste du pays aujou...  direct        0   \n",
        "\n",
        "   request  offer  aid_related  medical_help  medical_products      ...        \\\n",
        "0        0      0            0             0                 0      ...         \n",
-       "1        0      0            1             0                 0      ...         \n",
+       "1        0      0            0             0                 0      ...         \n",
        "2        0      0            0             0                 0      ...         \n",
-       "3        1      0            1             0                 1      ...         \n",
+       "3        0      0            0             0                 0      ...         \n",
        "4        0      0            0             0                 0      ...         \n",
        "\n",
        "   aid_centers  other_infrastructure  weather_related  floods  storm  fire  \\\n",
        "0            0                     0                0       0      0     0   \n",
-       "1            0                     0                1       0      1     0   \n",
+       "1            0                     0                0       0      0     0   \n",
        "2            0                     0                0       0      0     0   \n",
        "3            0                     0                0       0      0     0   \n",
        "4            0                     0                0       0      0     0   \n",
@@ -1399,7 +1400,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1432,7 @@
        "(31, 4)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1453,7 +1454,7 @@
        "(26386, 40)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1464,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1474,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1484,7 @@
        "(0, 4)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1496,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1505,7 +1506,7 @@
        "(26177, 40)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
